Refactored menu and fixed alignment issues with borders

--- a/restaurant/src/style.css
+++ b/restaurant/src/style.css
@@ -15,6 +15,8 @@ h1 {
     width: 100vw;
     height: 100vh;
     position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
 header {
@@ -70,6 +72,14 @@ header {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.contact-details {
+    width:L 100%;
+    color: white;
+    bottom: 10%;
+    font-size: 36px;
+    font-family: Arial, Helvetica, sans-serif
+}
+
 #biz-description {
     text-align: center;
     margin: auto;
@@ -85,14 +95,15 @@ header {
 }
 
 #bottom-border {
+    margin-top: 25px;
     width: 100%;
     height: 50px;
     background-color: black;
     /* margin-bottom: 0px; */
     display: flex;
     justify-content: center;
-    position: absolute;
-    bottom: 0px;
+    /* position: absolute; */
+    /* bottom: 0px; */
 }
 
 #bottom-text {
@@ -102,6 +113,8 @@ header {
 }
 
 #media {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     text-align: center;
 }
@@ -109,8 +122,43 @@ header {
 /* This is how you can scale different sized images and 
 keep aspect scale mostly */
 .menu-image {
+    margin: auto;
+    /* margin-top: 15px; */
     float: left;
-    width:  100vw;
+    /* width:  50vw; */
+    width: 200px;
+    height: 150px;
     height: auto;
     object-fit: cover;
+}
+
+/* Menu item details */
+
+.menu-card {
+    display: flex;
+    position: relative;
+    background-color: grey;
+    width: 75vw;
+    margin: auto;
+    border-radius: 3px;
+    justify-content: center;
+    padding: 15px;
+    margin-bottom: 15px;
+    /* justify-content: flex-start; */
+}
+
+.menu-item-desc {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    width: 50%;
+    text-align: center;
+}
+
+.item-name {
+    
+}
+
+.item-description {
+
 }
